--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -9,7 +9,7 @@
         <div class="collapse navbar-collapse justify-content-between px-lg-3" id="navbarCollapse">
             <div class="navbar-nav mx-auto py-0">
                 <a <% if(active=="index" ){ %>class="nav-item nav-link active"<% } else {%>class="nav-item nav-link"
-                        <%}%> href="/index" >Home</a>
+                        <%}%> href="/" >Home</a>
                 <a <% if(active=="create" ){ %>class="nav-item nav-link active"<% }else {%>class="nav-item nav-link"
                         <%}%> href="/create" >Contact</a>
             </div>
