--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,16 +3,14 @@
 
 <%-include('partials/header');%>
 
-    <body>
+<body>
+    <!-- Navbar Start -->
+    <%-include('partials/navbar',{active: active});%>
+    <!-- Navbar End -->
 
-        <!-- Navbar Start -->
-        <%-include('partials/navbar',{active: active});%>
-            <!-- Navbar End -->
-
-
-            <!-- Header Start -->
-            <% if(active=='index' ){ %>
-                <div class="jumbotron jumbotron-fluid position-relative overlay-bottom" style="margin-bottom: 90px;">
+    <!-- Header Start -->
+    <% if(active=='index' ){ %>
+        <div class="jumbotron jumbotron-fluid position-relative overlay-bottom" style="margin-bottom: 90px;">
                     <div class="container text-center my-5 py-5">
                         <h1 class="text-white mt-4 mb-4">Show your hack</h1>
                         <h1 class="text-white display-1 mb-5">Hacker Box</h1>
@@ -31,16 +29,13 @@
                             </div>
                         </div>
                     </div>
-                </div>
-                <% } %>
-
-                    <!-- Header End -->
-
-
-
-                    <!-- About Start -->
-                    <% if(active=='index' ){ %>
-                        <div class="container-fluid py-5">
+        </div>
+    <% } %>
+    <!-- Header End -->
+    
+    <!-- About Start -->
+    <% if(active=='index' ){ %>
+        <div class="container-fluid py-5">
                             <div class="container py-5">
                                 <div class="row">
                                     <div class="col-lg-5 mb-5 mb-lg-0" style="min-height: 500px;">
@@ -98,78 +93,43 @@
                                     </div>
                                 </div>
                             </div>
-                        </div>
-                        <% } %>
-                            <!-- About End -->
+        </div>
+    <% } %>
+    <!-- About End -->
 
 
 
-                            <!-- Courses Start -->
-                            <% if(active=='index' ){ %>
-                                <div class="container-fluid px-0 py-5">
-                                    <div class="row mx-0 justify-content-center pt-5">
-                                        <div class="col-lg-6">
-                                            <div class="section-title text-center position-relative mb-4">
-                                                <h6
-                                                    class="d-inline-block position-relative text-secondary text-uppercase pb-2">
-                                                    Hackathons</h6>
-                                                <h1 class="display-4">Checkout Latest Hackathons</h1>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="owl-carousel courses-carousel">
-                                        <% data.forEach(hackathon=>{ %>
-                                            <div class="courses-item position-relative">
-                                                <img class="img-fluid" src="<%=hackathon.imageUrl%>>" alt="">
-                                                <div class="courses-text">
-                                                    <h4 class="text-center text-white px-3"><%=hackathon.name%>
-                                                    </h4>
-                                                    <div class="border-top w-100 mt-3">
-                                                        <div class="d-flex justify-content-between p-4">
-                                                            <span class="text-white"><i class="fa fa-user mr-2"></i><%=hackathon.tags%></span>
-                                                            <span class="text-white"><i class="fa fa-star mr-2"></i>Status
-                                                                <small><% if(hackathon.isActive==true){%>(Active)<%}else{%>(Closed)<%}%></small></span>
-                                                        </div>
-                                                    </div>
-                                                    <div class="w-100 bg-white text-center p-4">
-                                                        <a class="btn btn-primary" href="/<%=hackathon.id%>/detail">Hackathon Detail</a>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <%}) %>
-                                    </div>
-                                </div>
-                                <% } %>
-                                    <!-- Courses End -->
+    <!-- Courses Start -->
+    <%-include('partials/hackathons');%>
+    <!-- Courses End -->
+
+    <!-- Courses detail Start -->
+    <%-include('partials/details');%>
+    <!-- Courses detail End -->
+
+    <!-- Contact Start -->
+    <%- include('partials/create');%>
+    <!-- Contact End -->
+
+    <!-- Footer Start -->
+    <%- include('partials/footer');%>
+    <!-- Footer End -->
 
 
-                                    <!-- Contact Start -->
-                                    <%- include('partials/create');%>
-                                        <!-- Contact End -->
+    <!-- Back to Top -->
+    <a href="#" class="btn btn-lg btn-primary rounded-0 btn-lg-square back-to-top"><i class="fa fa-angle-double-up"></i></a>
 
 
-                                        <!-- Footer Start -->
-                                        <%- include('partials/footer');%>
-                                            <!-- Footer End -->
+    <!-- JavaScript Libraries -->
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script
+        src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js"></script>
+    <script src="/lib/easing/easing.min.js"></script>
+    <script src="/lib/waypoints/waypoints.min.js"></script>
+    <script src="/lib/counterup/counterup.min.js"></script>
+    <script src="/lib/owlcarousel/owl.carousel.min.js"></script>
 
-
-                                            <!-- Back to Top -->
-                                            <a href="#"
-                                                class="btn btn-lg btn-primary rounded-0 btn-lg-square back-to-top"><i
-                                                    class="fa fa-angle-double-up"></i></a>
-
-
-                                            <!-- JavaScript Libraries -->
-                                            <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-                                            <script
-                                                src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js"></script>
-                                            <script src="lib/easing/easing.min.js"></script>
-                                            <script src="lib/waypoints/waypoints.min.js"></script>
-                                            <script src="lib/counterup/counterup.min.js"></script>
-                                            <script src="lib/owlcarousel/owl.carousel.min.js"></script>
-
-                                            <!-- Template Javascript -->
-                                            <script src="js/main.js"></script>
-    </body>
-
+    <!-- Template Javascript -->
+    <script src="/js/main.js"></script>
+</body>
 </html>
