--- a/views/partials/create.ejs
+++ b/views/partials/create.ejs
@@ -1,4 +1,5 @@
    <!-- Contact Start -->
+   <% if(active=='create' ){ %>
    <div class="container-fluid py-5">
     <div class="container py-5">
         <div class="row align-items-center">
@@ -63,4 +64,5 @@
         </div>
     </div>
 </div>
+<% } %>
 <!-- Contact End -->
