Register hack page

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -107,6 +107,10 @@
     <%-include('partials/details');%>
     <!-- Courses detail End -->
 
+    <!-- registerHack Start -->
+    <%- include('partials/registerHack');%>
+    <!-- registerHack End -->
+
     <!-- Contact Start -->
     <%- include('partials/create');%>
     <!-- Contact End -->
