--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -13,7 +13,7 @@
                 <a <% if(active=="create" ){ %>class="nav-item nav-link active"<% }else {%>class="nav-item nav-link"
                         <%}%> href="/create" >Contact</a>
             </div>
-            <a href="/create" class="btn btn-primary py-2 px-4 d-none d-lg-block">Create Hack</a>
+            <a href="/registerHack" class="btn btn-primary py-2 px-4 d-none d-lg-block">Register Hack/Event</a>
         </div>
     </nav>
 </div>
