--- a/views/partials/details.ejs
+++ b/views/partials/details.ejs
@@ -22,7 +22,7 @@
                             <div class="border-top w-100 mt-3">
                                 <div class="d-flex justify-content-between p-4">
                                     <span class="text-white"><i
-                                            class="fa fa-user mr-2"></i><%=hack.team %></span>
+                                            class="fa fa-user mr-2"></i><%=hack.team.length %></span>
                                     <span class="text-white"><i
                                             class="fa fa-star mr-2"></i>Status
                                         <small> <% if(hack.status=="Active"){%>(Active)<%}else{%>
