--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -9,9 +9,9 @@
         <div class="collapse navbar-collapse justify-content-between px-lg-3" id="navbarCollapse">
             <div class="navbar-nav mx-auto py-0">
                 <a <% if(active=="index" ){ %>class="nav-item nav-link active"<% } else {%>class="nav-item nav-link"
-                        <%}%> href="/" >Home</a>
-                <a <% if(active=="create" ){ %>class="nav-item nav-link active"<% }else {%>class="nav-item nav-link"
-                        <%}%> href="/create" >Contact</a>
+                        <%}%> href="/" >Hackathons</a>
+                <a <% if(active=="registerHack" ){ %>class="nav-item nav-link active"<% }else {%>class="nav-item nav-link"
+                        <%}%> href="/registerHack" >New Hack !</a>
             </div>
             <a href="/registerHack" class="btn btn-primary py-2 px-4 d-none d-lg-block">Register Hack/Event</a>
         </div>
