--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,7 @@
 
 <body>
     <!-- Navbar Start -->
-    <%-include('partials/navbar',{active: active});%>
+    <%-include('partials/navbar',{active: active, currentUser : currentUser});%>
     <!-- Navbar End -->
 
     <!-- Header Start -->
