--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,6 +1,6 @@
 <div class="container-fluid p-0">
     <nav class="navbar navbar-expand-lg bg-white navbar-light py-3 py-lg-0 px-lg-5">
-        <a href="index.html" class="navbar-brand ml-lg-3">
+        <a href="/" class="navbar-brand ml-lg-3">
             <h1 class="m-0 text-uppercase text-primary"><i class="fa fa-book-reader mr-3"></i>Hacker Box</h1>
         </a>
         <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
@@ -14,6 +14,7 @@
                         <%}%> href="/registerHack" >New Hack !</a>
             </div>
             <a href="/registerHack" class="btn btn-primary py-2 px-4 d-none d-lg-block">Register Hack/Event</a>
+            <a href="#" class="nav-item nav-link">Welcome! <%= currentUser%></a>
         </div>
     </nav>
 </div>
