--- a/views/partials/details.ejs
+++ b/views/partials/details.ejs
@@ -15,17 +15,15 @@
                 <% data.forEach(hack=>{ %>
                 <div class="col-lg-4 col-md-6 pb-4">
                     <a class="courses-list-item position-relative d-block overflow-hidden mb-2"
-                        href="/detail/<%=hack.hackathonId%>/overview/<%=hack.id%>">
-                        <img class="img-fluid" src="<%=hack.imageUrl%>" alt="">
+                        href="/detail/<%=hack.id%>/overview/<%=hack.data.id%>">
+                        <img class="img-fluid" src="<%=hack.data.imageUrl%>" alt="">
                         <div class="courses-text">
-                            <h4 class="text-center text-white px-3"><%=hack.name%></h4>
+                            <h4 class="text-center text-white px-3"><%=hack.data.name%></h4>
                             <div class="border-top w-100 mt-3">
                                 <div class="d-flex justify-content-between p-4">
                                     <span class="text-white"><i
-                                            class="fa fa-user mr-2"></i><%=hack.team.length %></span>
-                                    <span class="text-white"><i
                                             class="fa fa-star mr-2"></i>Status
-                                        <small> <% if(hack.status=="Active"){%>(Active)<%}else{%>
+                                        <small> <% if(hack.data.status=="Active"){%>(Active)<%}else{%>
                                             (Closed)<%}%></small></span>
                                 </div>
                             </div>
