--- a/views/partials/registerHack.ejs
+++ b/views/partials/registerHack.ejs
@@ -8,28 +8,27 @@
                      <h6 class="d-inline-block position-relative text-secondary text-uppercase pb-2">Register your Hack</h6>
                      <h1 class="display-4">Submit your Hack</h1>
                  </div>
-                 <div class="contact-form">
-                     <form>
+                 <div class="contact-form container mt-4">
+                     <form id="hackForm" action="/createGroup" method="POST">
                          
                         <div class="form-group">
-                            <input type="text" class="form-control border-top-0 border-right-0 border-left-0 p-0" placeholder="Name of your hack" required="required">
+                            <input id="name" name="name" type="text" class="form-control border-top-0 border-right-0 border-left-0 p-0" placeholder="Name of your hack" required="required">
                         </div>
                          
                          <div class="form-group">
-                            <input type="text" class="form-control border-top-0 border-right-0 border-left-0 p-0" placeholder="Description" required="required">
+                            <input id="desc" name="desc" type="text" class="form-control border-top-0 border-right-0 border-left-0 p-0" placeholder="Description" required="required">
                         </div>
-                        <!-- <div class="form-group">
-                            <input type="text" value="MSFT" class="form-control" data-role="tagsinput" data-tag-trigger="Space">
-                        </div> -->
                         
-                         <div class="form-group">
-                             <input type="text" class="form-control border-top-0 border-right-0 border-left-0 p-0" placeholder="Subject" required="required">
-                         </div>
-                         <div class="form-group">
-                             <textarea class="form-control border-top-0 border-right-0 border-left-0 p-0" rows="5" placeholder="Message" required="required"></textarea>
-                         </div>
+                        <div class="form-group">
+                            <input id="alias" name="alias" type="text" class="form-control border-top-0 border-right-0 border-left-0 p-0" placeholder="Give an alias" required="required">
+                        </div>
+
+                        <div class="form-group">
+                            <input type="text" name="tagdata" value="" data-role="tagsinput" placeholder="Add tags" />
+                        </div>
+                        
                          <div>
-                             <button class="btn btn-primary py-3 px-5" type="submit">Send Message</button>
+                             <button class="btn btn-primary py-3 px-5" type="submit">Submit Hack</button>
                          </div>
                      </form>
                  </div>
