add memeber api

--- a/views/partials/hackdetails.ejs
+++ b/views/partials/hackdetails.ejs
@@ -31,7 +31,7 @@
                             <%}) %>
                                 <h5 class="text-white py-3 px-4 m-0">Hack open to join: Yes</h5>
                                 <div class="py-3 px-4">
-                                    <a class="btn btn-block btn-secondary py-3 px-5" href="/create">Join Now</a>
+                                    <a class="btn btn-block btn-secondary py-3 px-5" href="/addmember/<%=data.ugid%>">Join now</a>
                                 </div>
                     </div>
                 </div>
