--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,7 +13,7 @@
         <div class="jumbotron jumbotron-fluid position-relative overlay-bottom" style="margin-bottom: 90px;">
                     <div class="container text-center my-5 py-5">
                         <h1 class="text-white mt-4 mb-4">Show your hack</h1>
-                        <h1 class="text-white display-1 mb-5">Hacker Box</h1>
+                        <h1 class="text-white display-1 mb-5">MS Garage</h1>
                         <div class="mx-auto mb-5" style="width: 100%; max-width: 600px;">
                             <div class="input-group">
                                 <div class="input-group-prepend">
