--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,7 +1,7 @@
 <div class="container-fluid p-0">
     <nav class="navbar navbar-expand-lg bg-white navbar-light py-3 py-lg-0 px-lg-5">
         <a href="/" class="navbar-brand ml-lg-3">
-            <h1 class="m-0 text-uppercase text-primary"><i class="fa fa-book-reader mr-3"></i>Hacker Box</h1>
+            <h1 class="m-0 text-uppercase text-primary"><i class="fa fa-book-reader mr-3"></i>MS Garage</h1>
         </a>
         <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
@@ -9,11 +9,11 @@
         <div class="collapse navbar-collapse justify-content-between px-lg-3" id="navbarCollapse">
             <div class="navbar-nav mx-auto py-0">
                 <a <% if(active=="index" ){ %>class="nav-item nav-link active"<% } else {%>class="nav-item nav-link"
-                        <%}%> href="/" >Hackathons</a>
-                <a <% if(active=="registerHack" ){ %>class="nav-item nav-link active"<% }else {%>class="nav-item nav-link"
-                        <%}%> href="/registerHack" >New Hack !</a>
+                        <%}%> href="/" >Home</a>
+                <!-- <a <% if(active=="registerHack" ){ %>class="nav-item nav-link active"<% }else {%>class="nav-item nav-link"
+                        <%}%> href="/registerHack" >New Hack !</a> -->
             </div>
-            <a href="/registerHack" class="btn btn-primary py-2 px-4 d-none d-lg-block">Register Hack/Event</a>
+            <a href="/registerHack" class="btn btn-primary py-2 px-4 d-none d-lg-block">Register Hack/Contest</a>
             <a href="#" class="nav-item nav-link">Welcome! <%= currentUser%></a>
         </div>
     </nav>
