--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -2,11 +2,11 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6 text-center text-md-left mb-3 mb-md-0">
-                <p class="m-0">Copyright &copy; <a class="text-white" href="#">Hacker Box</a>. All Rights Reserved.
+                <p class="m-0">Copyright &copy; <a class="text-white" href="#">MS Garage</a>. All Rights Reserved.
                 </p>
             </div>
             <div class="col-md-6 text-center text-md-right">
-                <p class="m-0">Designed by <a class="text-white" href="https://htmlcodex.com">Hacker Box</a>
+                <p class="m-0">Designed by <a class="text-white" href="https://htmlcodex.com">MS Garage</a>
                 </p>
             </div>
         </div>
