--- a/views/partials/details.ejs
+++ b/views/partials/details.ejs
@@ -7,7 +7,7 @@
                         <h6
                             class="d-inline-block position-relative text-secondary text-uppercase pb-2">
                             Hackathon Details</h6>
-                        <h1 class="display-4">List of Hacks in Hackathon</h1>
+                        <h1 class="display-4">Ideas in Hackathon</h1>
                     </div>
                 </div>
             </div>
