--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,6 +1,6 @@
 <head>
     <meta charset="utf-8">
-    <title>MS Garrage - Organize your Hackathon</title>
+    <title>MS Garage - Organize your Hackathon</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="hack hackathon" name="keywords">
     <meta content="hack hackathon" name="description">
