--- a/views/partials/about.ejs
+++ b/views/partials/about.ejs
@@ -12,20 +12,16 @@
                 <div class="col-lg-7">
                     <div class="section-title position-relative mb-4">
                         <h6 class="d-inline-block position-relative text-secondary text-uppercase pb-2">
-                            About Us
+                            About MS Garage
                         </h6>
-                        <h1 class="display-4">Turn an Idea into Hack</h1>
+                        <h1 class="display-4">Hackathon inside your Organization</h1>
                     </div>
-                    <p>Showcase your ideas and innovation. Create a team collaboration with
-                        different
-                        people
-                        inside
-                        your organisation.</p>
+                    <p>MS Garage will empower you to showcase your HACK ideas and Innovations inside your Organization.</p>
                     <div class="row pt-3 mx-0">
                         <div class="col-3 px-0">
                             <div class="bg-success text-center p-4">
                                 <h1 class="text-white" data-toggle="counter-up">20</h1>
-                                <h6 class="text-uppercase text-white">Total<span class="d-block">Orgs</span>
+                                <h6 class="text-uppercase text-white">Total<span class="d-block">Departments</span>
                                 </h6>
                             </div>
                         </div>
