--- a/views/partials/hackathons.ejs
+++ b/views/partials/hackathons.ejs
@@ -5,7 +5,7 @@
                 <div class="section-title text-center position-relative mb-4">
                     <h6 class="d-inline-block position-relative text-secondary text-uppercase pb-2">
                         Hackathons</h6>
-                    <h1 class="display-4">Checkout Latest Hackathons</h1>
+                    <h1 class="display-4">Latest Hackathons</h1>
                 </div>
             </div>
         </div>
