--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -6,7 +6,7 @@
                 </p>
             </div>
             <div class="col-md-6 text-center text-md-right">
-                <p class="m-0">Designed by <a class="text-white" href="https://htmlcodex.com">MS Garage</a>
+                <p class="m-0">Designed by <a class="text-white" href="#">MS Garage</a>
                 </p>
             </div>
         </div>
