--- a/views/partials/hackdetails.ejs
+++ b/views/partials/hackdetails.ejs
@@ -23,18 +23,21 @@
                         <h3 class="text-white py-3 px-4 m-0">Team Members</h3>
                         <% data.team.forEach(member=>{ %>
                             <div class="d-flex justify-content-between border-bottom px-4">
-                                <h6 class="text-white my-3"><%=member.type%></h6>
+                                <h6 class="text-white my-3">
+                                    <%=member.type%>
+                                </h6>
                                 <h6 class="text-white my-3">
                                     <%=member.name%>
                                 </h6>
-                            </div>                    
+                            </div>
                             <%}) %>
-                            <h5 class="text-white py-3 px-4 m-0">Hack open to join: Yes</h5>
-                            <% if(!(data.team.includes(currentUser))){ %>
-                            <div class="py-3 px-4">
-                                <a class="btn btn-block btn-secondary py-3 px-5" href="/addmember/<%=data.ugid%>">Join now</a>
-                            </div>  
-                            <%}%>                             
+                            <% if(data.isJoined==false ) { %>
+                                <h5 class="text-white py-3 px-4 m-0">Hack open to join: Yes</h5>
+                                    <div class="py-3 px-4">
+                                        <a class="btn btn-block btn-secondary py-3 px-5"
+                                            href="/addmember/<%=data.ugid%>">Join now</a>
+                                    </div>
+                                    <%}%>
                     </div>
                 </div>
             </div>
