--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -13,7 +13,7 @@
                 <!-- <a <% if(active=="registerHack" ){ %>class="nav-item nav-link active"<% }else {%>class="nav-item nav-link"
                         <%}%> href="/registerHack" >New Hack !</a> -->
             </div>
-            <a href="/registerHack" class="btn btn-primary py-2 px-4 d-none d-lg-block">Register Hack/Contest</a>
+            <a href="/registerHack/new" class="btn btn-primary py-2 px-4 d-none d-lg-block">Register Hack/Contest</a>
             <a href="#" class="nav-item nav-link">Welcome! <%= currentUser%></a>
         </div>
     </nav>
