--- a/views/partials/registerHack.ejs
+++ b/views/partials/registerHack.ejs
@@ -1,40 +1,56 @@
-   <!-- Contact Start -->
-   <% if(active=='registerHack' ){ %> 
+<!-- Contact Start -->
+<% if(active=='registerHack' ){ %>
     <div class="container-fluid py-5">
-     <div class="container py-5">
-         <div class="row align-items-center">
-             <div class="col-lg-7">
-                 <div class="section-title position-relative mb-4">
-                     <h6 class="d-inline-block position-relative text-secondary text-uppercase pb-2">Register your Hack</h6>
-                     <h1 class="display-4">Submit your Hack</h1>
-                 </div>
-                 <div class="contact-form container mt-4">
-                     <form id="hackForm" action="/createGroup" method="POST">
-                         
-                        <div class="form-group">
-                            <input id="name" name="name" type="text" class="form-control border-top-0 border-right-0 border-left-0 p-0" placeholder="Name of your hack" required="required">
-                        </div>
-                         
-                         <div class="form-group">
-                            <input id="desc" name="desc" type="text" class="form-control border-top-0 border-right-0 border-left-0 p-0" placeholder="Description" required="required">
-                        </div>
-                        
-                        <div class="form-group">
-                            <input id="alias" name="alias" type="text" class="form-control border-top-0 border-right-0 border-left-0 p-0" placeholder="Give an alias" required="required">
-                        </div>
+        <div class="container py-5">
+            <%if(created != undefined && created=="created"){%>
+                <div class="row align-items-center">
+                    <p>Idea Created</p>
+                </div>
+                <% } else {%>
+                    <div class="row align-items-center">
+                        <div class="col-lg-7">
+                            <div class="section-title position-relative mb-4">
+                                <h6 class="d-inline-block position-relative text-secondary text-uppercase pb-2">Register
+                                    your Hack</h6>
+                                <h1 class="display-4">Submit your Hack</h1>
+                            </div>
+                            <div class="contact-form container mt-4">
+                                <form id="hackForm" action="/createGroup" method="POST">
 
-                        <div class="form-group">
-                            <input type="text" name="tagdata" value="" data-role="tagsinput" placeholder="Add tags" />
+                                    <div class="form-group">
+                                        <input id="name" name="name" type="text"
+                                            class="form-control border-top-0 border-right-0 border-left-0 p-0"
+                                            placeholder="Name of your hack" required="required">
+                                    </div>
+
+                                    <div class="form-group">
+                                        <input id="desc" name="desc" type="text"
+                                            class="form-control border-top-0 border-right-0 border-left-0 p-0"
+                                            placeholder="Description" required="required">
+                                    </div>
+
+                                    <div class="form-group">
+                                        <input id="alias" name="alias" type="text"
+                                            class="form-control border-top-0 border-right-0 border-left-0 p-0"
+                                            placeholder="Give an alias" required="required">
+                                    </div>
+
+                                    <div class="form-group">
+                                        <input type="text" name="tagdata" value="" data-role="tagsinput"
+                                            placeholder="Add tags" />
+                                    </div>
+
+                                    <div>
+                                        <button class="btn btn-primary py-3 px-5" type="submit">Submit Hack</button>
+                                    </div>
+                                </form>
+                            </div>
                         </div>
-                        
-                         <div>
-                             <button class="btn btn-primary py-3 px-5" type="submit">Submit Hack</button>
-                         </div>
-                     </form>
-                 </div>
-             </div>
-         </div>
-     </div>
- </div>
- <% } %> 
- <!-- Contact End -->
+                    </div>
+                    <% }%>
+
+
+        </div>
+    </div>
+    <% } %>
+        <!-- Contact End -->
